# cut-pns

./: .gitignore  CMakeLists.txt
pus1/: CMakeLists.txt  Makefile
pus1/src/: client2.c  client3.c  libpalindrome.c  server1.c  server2.c  server3.c  server4.c  server5.c
pus2/: CMakeLists.txt
pus2/src/: client.c  client4.c  client6.c  server4.c  server6.c
pus3/: CMakeLists.txt
pus3/src/: ping.c  ssrr.c  tcp.c  udpv6.c  udpv62.c
pus4/: CMakeLists.txt
pus4/zad1/: Makefile
pus4/zad1/src/: client1.c  server1.c
pus4/zad2/: Makefile
pus4/zad2/src/: client2.c  server2.c
pus4/zad3/: Makefile
pus4/zad3/src/: client3.c  server3.c
pus5/: CMakeLists.txt
pus5/zad1/: Makefile
pus5/zad2/: Makefile
pus5/zad2/src/: proclist.c
pus5/zad3/: Makefile
pus5/zad3/src/: ioarp.c
pus5/zad4/: Makefile
pus5/zad4/src/: iomac.c
pus5/zad5/: Makefile
pus5/zad5/src/: ioaddr.c
pus6/: CMakeLists.txt  Makefile
pus6/zad1/: Makefile
pus6/zad1/src/: list.c
pus6/zad2/: Makefile
pus6/zad2/src/: ipaddr.c
pus6/zad3/: Makefile
pus6/zad3/src/: ipaddrmod.c
pus6/zad4/: Makefile
pus6/zad4/src/: event.c
pus7/: CMakeLists.txt
pus7/zad1/: Makefile
pus7/zad2/: Makefile
pus7/zad3/: Makefile
pus7/zad3/src/: exec_rsa.c
pus7/zad4/: Makefile
pus7/zad5/: Makefile
pus7/zad5/src/: libcommon.c  sftp_get.c
pus8/: CMakeLists.txt
pus8/zad1/: Makefile
pus8/zad1/src/: cipher_ecb.c
pus8/zad2/: Makefile
pus8/zad2/src/: cipher_cbc.c
pus8/zad3/: Makefile
pus8/zad4/: Makefile
pus8/zad5/: Makefile
pus8/zad5/src/: mac.c
pus8/zad6/: Makefile
pus8/zad6/src/: client_hmac.c  server_hmac.c
pus8/zad7/: Makefile
