set(CMAKE_C_STANDARD 11)



add_executable(7_1 zad1/src/authlist.c zad1/src/libcommon.c zad1/src/libcommon.h)
add_executable(7_2 zad2/src/exec.c zad2/src/libcommon.c zad2/src/libcommon.h)
add_executable(7_3 zad3/src/exec_rsa.c zad3/src/libcommon.c zad3/src/libcommon.h)
add_executable(7_4 zad4/src/sftp.c zad4/src/libcommon.c zad4/src/libcommon.h)
add_executable(7_5 zad5/src/sftp_get.c zad5/src/libcommon.c zad5/src/libcommon.h)
